--- a/docker-compose.kaf.yml
+++ b/docker-compose.kaf.yml
@@ -46,10 +46,24 @@ services:
     build:
       args:
         INSTALL_DEV: ${INSTALL_DEV-true}
-      context: ./kaf
-      dockerfile: api.dockerfile
+      context: ./api-kaf
+      dockerfile: dockerfile
     volumes:
-      - ./kaf/app:/app
+      - ./api-kaf/app:/app
+    networks:
+      - kafka-learn
+
+  proc-kaf:
+    image: proc-kaf
+    container_name: proc-kaf
+    env_file: .kaf.env
+    build:
+      args:
+        INSTALL_DEV: ${INSTALL_DEV-true}
+      context: ./proc-kaf
+      dockerfile: dockerfile
+    volumes:
+      - ./proc-kaf/app:/app
     networks:
       - kafka-learn
 
