--- a/proc-kaf/app/pyproject.toml
+++ b/proc-kaf/app/pyproject.toml
@@ -13,6 +13,8 @@ toml = "0.10.2"
 bcrypt = "^4.0.1"
 aiohttp = "^3.8.4"
 kafka-python = "^2.0.2"
+aiokafka = "^0.10.0"
+confluent-kafka = "^2.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=4.6"
